# HS

./: .gitignore  CMakeLists.txt  HS_v2.rar  HearthStoneUml.qea  Player.utest.cpp  README.md  Ui.utest.cpp  build.sh  demo.rar  gen_mock.py  main.cpp  run_coverage.sh  test  test.cpp
HS_v2/: CMakeLists.txt  main.cpp  test.cpp
HS_v2/inc/Card/: CardFactory.h
HS_v2/inc/CardManager/: CardManager.h
HS_v2/inc/Hero/: Hero.h
HS_v2/lib/googletest/googlemock/: CMakeLists.txt
HS_v2/lib/googletest/googletest/: CMakeCache.txt  CMakeLists.txt
HS_v2/lib/googletest/googletest/lib/: gtest.lib  gtest_main.lib
HS_v2/src/Card/: Card.cpp
HS_v2/src/Hero/: Hero.cpp
HS_v2/src/MySocket/: MySocket.cpp
HS_v2/utest/: gen_mock.py
HS_v2/utest/mock/: mock_CardData.h  mock_CardFactory.h  mock_CardManager.h  mock_Engine.h  mock_Hero.h  mock_HeroData.h  mock_MySocket.h  mock_Player.h  mock_Ui.h
UT/: CMakeLists.txt  CardManager_test.cpp  Card_test.cpp  GameUi_test.cpp  Hero_test.cpp  Mysocket_test.cpp
UT/cmake/: gtest_CMakeLists.txt
UT/mock/: gen_mock.py  mock.h
UT/mock/cmake/: mock_CMakeLists.txt
inc/Card/: Card.h  CardFactory.h
inc/CardFactory/: Card.h  CardData.h  CardFactory.h
inc/CardManager/: CardManager.h  Hero.h
inc/CardManager/CardFactory/: Card.h  CardFactory.h
inc/CardManager/GameEntities/: Entity.h  Hero.h
inc/Console/: Console.h
inc/Engine/: Engine.h
inc/Entity/: Entity.h  Hero.h  Minion.h
inc/Game/: Game.h  GameData.h
inc/GameEngine/: GameEngine.h
inc/GameEntities/: Entity.h  Hero.h  Minion.h
inc/GameUi/: GameUi.h
inc/Helper/: Helper.h
inc/Hero/: Hero.h
inc/MySocket/: MySocket.h  Socket.h
inc/Player/: Player.h
inc/Socket/: Ip.h  Socket.h
inc/UI/: Ui.h
inc/Units/: Hero.h  Minion.h  Units.h
inc/assets/: CardData.h  HeroData.h
lib/gtest/: CMakeCache.txt  Makefile  cmake_install.cmake
lib/gtest/lib/: gtest.lib  gtest_main.lib
mock/: mock_CardData.h  mock_CardManager.h  mock_Engine.h  mock_HeroData.h  mock_MySocket.h  mock_Player.h  mock_Ui.h
src/Card/: Card.cpp
src/CardFactory/: Card.cpp
src/CardManager/: CardManager.cpp  Hero.cpp
src/CardManager/CardFactory/: Card.cpp
src/CardManager/GameEntities/: Entity.cpp  Hero.cpp
src/Console/: Console.cpp
src/Engine/: Engine.cpp
src/Entity/: Entity.cpp  Hero.cpp  Minion.cpp
src/Game/: Game.cpp  Game_bk.cpp
src/GameEngine/: GameEngine.cpp
src/GameEntities/: Entity.cpp  Hero.cpp  Minion.cpp
src/GameUi/: GameUi.cpp
src/Hero/: Hero.cpp
src/MySocket/: MySocket.cpp  Socket.cpp
src/Player/: Player.cpp
src/Socket/: Socket.cpp
src/UI/: Ui.cpp
src/Units/: Hero.cpp  Minion.cpp  Units.cpp
utest/: Card.utest.cpp  CardManager.utest.cpp  Engine.utest.cpp  Hero.utest.cpp  MySocket.utest.cpp  Player.utest.cpp  Ui.utest.cpp  gen_mock.py
utest/mock/: mock_Card.h  mock_CardData.h  mock_CardFactory.h  mock_CardManager.h  mock_Engine.h  mock_Hero.h  mock_HeroData.h  mock_MySocket.h  mock_Player.h  mock_Ui.h
